--- a/files/etc/httpd/conf/httpd.conf
+++ b/files/etc/httpd/conf/httpd.conf
@@ -83,7 +83,7 @@ Group apache
 # e-mailed.  This address appears on some server-generated pages, such
 # as error documents.  e.g. admin@your-domain.com
 #
-ServerAdmin dioman172@yandex.ru
+ServerAdmin root@localhost
 
 #
 # ServerName gives the name and port that the server uses to identify itself.
@@ -194,12 +194,12 @@ LogLevel warn
     # a CustomLog directive (see below).
     #
     LogFormat "%a %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
-    #LogFormat "%h %l %u %t \"%r\" %>s %b" common
+    LogFormat "%h %l %u %t \"%r\" %>s %b" common
 
-    #<IfModule logio_module>
+    <IfModule logio_module>
       # You need to enable mod_logio.c to use %I and %O
-      #LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" %I %O" combinedio
-    #</IfModule>
+      LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" %I %O" combinedio
+    </IfModule>
 
     #
     # The location and format of the access logfile (Common Logfile Format).
