--- a/files/etc/httpd/conf.d/headers.conf
+++ b/files/etc/httpd/conf.d/headers.conf
@@ -13,4 +13,8 @@
   RequestHeader unset X-Forwarded-Port
 </IfModule>
 
+<IfModule mod_headers.c>
+  Header always set Strict-Transport-Security "max-age=15552000; includeSubDomains; preload"
+</IfModule>
+
 LimitRequestFieldSize 16384
